--- a/.github/workflows/cdeployment.yml
+++ b/.github/workflows/cdeployment.yml
@@ -85,4 +85,4 @@ jobs:
       - run: |
           curl -Lo ./firebase_tools https://firebase.tools/bin/linux/latest
           chmod +x ./firebase_tools
-          ./firebase_tools deploy --only hosting
+          ./firebase_tools deploy --only hosting --app "$FIREBASE_APP_ID"
