--- a/.github/workflows/cdelivery.yml
+++ b/.github/workflows/cdelivery.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-      - run: flutter build ipa
+      - run: flutter build ipa --no-codesign
       - uses: actions/upload-artifact@v2 
         with:
           name: xcarchive
@@ -47,8 +47,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - run: flutter build web
-      # - run: zip --recurse-paths ../web.zip .
-      #   working-directory: build
       - uses: actions/upload-artifact@v2 
         with:
           name: web
