--- a/.github/workflows/cdelivery.yml
+++ b/.github/workflows/cdelivery.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-      - run: flutter build ipa --no-codesign
+      - run: flutter build ipa
       - uses: actions/upload-artifact@v2 
         with:
           name: xcarchive
