--- a/.github/workflows/cdeployment.yml
+++ b/.github/workflows/cdeployment.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - run: flutter build ipa
-      # - run: bundle exec fastlane export_ipa using build/ios/archive/Runner.xcarchive
+      # - run: bundle exec fastlane export_ipa
       - uses: actions/upload-artifact@v2 
         with:
           name: ipa
